samples/_failures_safe/1761792849_af7338_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d444ca54.c: In function ‘main’:
./samples/SAFE/__tmp_d444ca54.c:173:5: error: expected expression at end of input
  173 |     if (
      |     ^~
./samples/SAFE/__tmp_d444ca54.c:173:5: error: expected declaration or statement at end of input
